cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09718_384763399.yaml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FarFlow/Vpc
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/Resource
  VpcPublicSubnet1Subnet5C2D37C4:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet1
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet1/Subnet
  VpcPublicSubnet1RouteTable6C95E38E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet1
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet1/RouteTable
  VpcPublicSubnet1RouteTableAssociation97140677:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet1/RouteTableAssociation
  VpcPublicSubnet1DefaultRoute3DA9E72A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet1/DefaultRoute
  VpcPublicSubnet1EIPD7E02669:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet1
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet1/EIP
  VpcPublicSubnet1NATGateway4D7517AA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VpcPublicSubnet1EIPD7E02669
          - AllocationId
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet1
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet1/NATGateway
  VpcPublicSubnet2Subnet691E08A3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet2
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet2/Subnet
  VpcPublicSubnet2RouteTable94F7E489:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet2
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet2/RouteTable
  VpcPublicSubnet2RouteTableAssociationDD5762D8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet2/RouteTableAssociation
  VpcPublicSubnet2DefaultRoute97F91067:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet2/DefaultRoute
  VpcPublicSubnet2EIP3C605A87:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet2
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet2/EIP
  VpcPublicSubnet2NATGateway9182C01D:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VpcPublicSubnet2EIP3C605A87
          - AllocationId
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PublicSubnet2
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PublicSubnet2/NATGateway
  VpcPrivateSubnet1Subnet536B997A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: FarFlow/Vpc/PrivateSubnet1
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet1/Subnet
  VpcPrivateSubnet1RouteTableB2C5B500:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PrivateSubnet1
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet1/RouteTable
  VpcPrivateSubnet1RouteTableAssociation70C59FA6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
      SubnetId:
        Ref: VpcPrivateSubnet1Subnet536B997A
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet1/RouteTableAssociation
  VpcPrivateSubnet1DefaultRouteBE02A9ED:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcPublicSubnet1NATGateway4D7517AA
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet1/DefaultRoute
  VpcPrivateSubnet2Subnet3788AAA1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: FarFlow/Vpc/PrivateSubnet2
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet2/Subnet
  VpcPrivateSubnet2RouteTableA678073B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: FarFlow/Vpc/PrivateSubnet2
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet2/RouteTable
  VpcPrivateSubnet2RouteTableAssociationA89CAD56:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
      SubnetId:
        Ref: VpcPrivateSubnet2Subnet3788AAA1
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet2/RouteTableAssociation
  VpcPrivateSubnet2DefaultRoute060D2087:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcPublicSubnet2NATGateway9182C01D
    Metadata:
      aws:cdk:path: FarFlow/Vpc/PrivateSubnet2/DefaultRoute
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: FarFlow/Vpc
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/Vpc/IGW
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
    Metadata:
      aws:cdk:path: FarFlow/Vpc/VPCGW
  ECSCluster7D463CD4:
    Type: AWS::ECS::Cluster
    Properties:
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/ECSCluster/Resource
  SecurityGroupDD263621:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FarFlow/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:All
          FromPort: 0
          IpProtocol: tcp
          ToPort: 65535
      Tags:
        - Key: Stack
          Value: FarFlow
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: FarFlow/SecurityGroup/Resource
  SecurityGroupfromFarFlowSecurityGroupF3A57711204913C15908:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from FarFlowSecurityGroupF3A57711:2049
      FromPort: 2049
      GroupId:
        Fn::GetAtt:
          - SecurityGroupDD263621
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SecurityGroupDD263621
          - GroupId
      ToPort: 2049
    Metadata:
      aws:cdk:path: FarFlow/SecurityGroup/from FarFlowSecurityGroupF3A57711:2049
  RDSPostgresDatabseSecret318154C2:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: airflow RDS secrets
      GenerateSecretString:
        ExcludeLowercase: false
        ExcludeNumbers: false
        ExcludePunctuation: true
        ExcludeUppercase: false
        GenerateStringKey: password
        IncludeSpace: false
        PasswordLength: 16
        RequireEachIncludedType: false
        SecretStringTemplate: '{"username":"airflow"}'
      Name: RDS-PostgresSecret
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/RDS-Postgres/DatabseSecret/Resource
  RDSPostgresRDSInstanceSubnetGroupB6B4FDAE:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDSInstance database
      SubnetIds:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/RDS-Postgres/RDSInstance/SubnetGroup/Default
  RDSPostgresRDSInstance7A956EB1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t2.small
      AllocatedStorage: "25"
      AutoMinorVersionUpgrade: false
      BackupRetentionPeriod: 30
      CopyTagsToSnapshot: true
      DBInstanceIdentifier: farflow
      DBName: farflow
      DBSubnetGroupName:
        Ref: RDSPostgresRDSInstanceSubnetGroupB6B4FDAE
      DeletionProtection: false
      Engine: postgres
      EngineVersion: "12.4"
      MasterUsername: airflow
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: RDSPostgresDatabseSecret318154C2
            - :SecretString:password::}}
      MultiAZ: false
      Port: "5432"
      PubliclyAccessible: false
      StorageEncrypted: true
      StorageType: gp2
      Tags:
        - Key: Stack
          Value: FarFlow
      VPCSecurityGroups:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
    UpdateReplacePolicy: Snapshot
    Metadata:
      aws:cdk:path: FarFlow/RDS-Postgres/RDSInstance/Resource
  AirflowServiceAirflowTaskTaskRoleDAB3F347:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSQSFullAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonECS_FullAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/CloudWatchLogsReadOnlyAccess
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/TaskRole/Resource
  AirflowServiceAirflowTask71E3494E:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - EntryPoint:
            - /webserver_entry.sh
          Environment:
            - Name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              Value:
                Fn::Join:
                  - ""
                  - - "postgresql+pygresql://airflow:{{resolve:secretsmanager:"
                    - Ref: RDSPostgresDatabseSecret318154C2
                    - :SecretString:password::}}@
                    - Fn::GetAtt:
                        - RDSPostgresRDSInstance7A956EB1
                        - Endpoint.Address
                    - :5432/farflow
            - Name: AIRFLOW__CELERY__BROKER_URL
              Value: sqs://
            - Name: AIRFLOW__CELERY__RESULT_BACKEND
              Value:
                Fn::Join:
                  - ""
                  - - "db+postgresql+pygresql://airflow:{{resolve:secretsmanager:"
                    - Ref: RDSPostgresDatabseSecret318154C2
                    - :SecretString:password::}}@
                    - Fn::GetAtt:
                        - RDSPostgresRDSInstance7A956EB1
                        - Endpoint.Address
                    - :5432/farflow
            - Name: AIRFLOW__CORE__EXECUTOR
              Value: CeleryExecutor
            - Name: AIRFLOW__WEBSERVER__RBAC
              Value: "True"
            - Name: ADMIN_PASS
              Value: 0e69d6d3-b29b-4713-8c3d-667d83a3b3bd
            - Name: CLUSTER
              Value:
                Ref: ECSCluster7D463CD4
            - Name: SECURITY_GROUP
              Value:
                Fn::GetAtt:
                  - SecurityGroupDD263621
                  - GroupId
            - Name: SUBNETS
              Value:
                Fn::Join:
                  - ""
                  - - Ref: VpcPrivateSubnet1Subnet536B997A
                    - ","
                    - Ref: VpcPrivateSubnet2Subnet3788AAA1
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:be7d0116cfaaa153fb4391022b652a32f0d7804f998c4a3b78aca47f564c67e5
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: AirflowServiceAirflowTaskWebserverContainerLogGroupB3157555
              awslogs-stream-prefix: FarFlowLogging
              awslogs-region:
                Ref: AWS::Region
          Name: WebserverContainer
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
        - EntryPoint:
            - /scheduler_entry.sh
          Environment:
            - Name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              Value:
                Fn::Join:
                  - ""
                  - - "postgresql+pygresql://airflow:{{resolve:secretsmanager:"
                    - Ref: RDSPostgresDatabseSecret318154C2
                    - :SecretString:password::}}@
                    - Fn::GetAtt:
                        - RDSPostgresRDSInstance7A956EB1
                        - Endpoint.Address
                    - :5432/farflow
            - Name: AIRFLOW__CELERY__BROKER_URL
              Value: sqs://
            - Name: AIRFLOW__CELERY__RESULT_BACKEND
              Value:
                Fn::Join:
                  - ""
                  - - "db+postgresql+pygresql://airflow:{{resolve:secretsmanager:"
                    - Ref: RDSPostgresDatabseSecret318154C2
                    - :SecretString:password::}}@
                    - Fn::GetAtt:
                        - RDSPostgresRDSInstance7A956EB1
                        - Endpoint.Address
                    - :5432/farflow
            - Name: AIRFLOW__CORE__EXECUTOR
              Value: CeleryExecutor
            - Name: AIRFLOW__WEBSERVER__RBAC
              Value: "True"
            - Name: ADMIN_PASS
              Value: 0e69d6d3-b29b-4713-8c3d-667d83a3b3bd
            - Name: CLUSTER
              Value:
                Ref: ECSCluster7D463CD4
            - Name: SECURITY_GROUP
              Value:
                Fn::GetAtt:
                  - SecurityGroupDD263621
                  - GroupId
            - Name: SUBNETS
              Value:
                Fn::Join:
                  - ""
                  - - Ref: VpcPrivateSubnet1Subnet536B997A
                    - ","
                    - Ref: VpcPrivateSubnet2Subnet3788AAA1
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:be7d0116cfaaa153fb4391022b652a32f0d7804f998c4a3b78aca47f564c67e5
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: AirflowServiceAirflowTaskSchedulerContainerLogGroupFA5FDB3B
              awslogs-stream-prefix: FarFlowLogging
              awslogs-region:
                Ref: AWS::Region
          Name: SchedulerContainer
          PortMappings:
            - ContainerPort: 8081
              Protocol: tcp
        - EntryPoint:
            - /worker_entry.sh
          Environment:
            - Name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              Value:
                Fn::Join:
                  - ""
                  - - "postgresql+pygresql://airflow:{{resolve:secretsmanager:"
                    - Ref: RDSPostgresDatabseSecret318154C2
                    - :SecretString:password::}}@
                    - Fn::GetAtt:
                        - RDSPostgresRDSInstance7A956EB1
                        - Endpoint.Address
                    - :5432/farflow
            - Name: AIRFLOW__CELERY__BROKER_URL
              Value: sqs://
            - Name: AIRFLOW__CELERY__RESULT_BACKEND
              Value:
                Fn::Join:
                  - ""
                  - - "db+postgresql+pygresql://airflow:{{resolve:secretsmanager:"
                    - Ref: RDSPostgresDatabseSecret318154C2
                    - :SecretString:password::}}@
                    - Fn::GetAtt:
                        - RDSPostgresRDSInstance7A956EB1
                        - Endpoint.Address
                    - :5432/farflow
            - Name: AIRFLOW__CORE__EXECUTOR
              Value: CeleryExecutor
            - Name: AIRFLOW__WEBSERVER__RBAC
              Value: "True"
            - Name: ADMIN_PASS
              Value: 0e69d6d3-b29b-4713-8c3d-667d83a3b3bd
            - Name: CLUSTER
              Value:
                Ref: ECSCluster7D463CD4
            - Name: SECURITY_GROUP
              Value:
                Fn::GetAtt:
                  - SecurityGroupDD263621
                  - GroupId
            - Name: SUBNETS
              Value:
                Fn::Join:
                  - ""
                  - - Ref: VpcPrivateSubnet1Subnet536B997A
                    - ","
                    - Ref: VpcPrivateSubnet2Subnet3788AAA1
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:be7d0116cfaaa153fb4391022b652a32f0d7804f998c4a3b78aca47f564c67e5
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: AirflowServiceAirflowTaskWorkerContainerLogGroup21E76534
              awslogs-stream-prefix: FarFlowLogging
              awslogs-region:
                Ref: AWS::Region
          Name: WorkerContainer
          PortMappings:
            - ContainerPort: 8082
              Protocol: tcp
      Cpu: "2048"
      ExecutionRoleArn:
        Fn::GetAtt:
          - AirflowServiceAirflowTaskExecutionRoleDFF6909B
          - Arn
      Family: FarFlowAirflowServiceAirflowTask5EE9A059
      Memory: "4096"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Stack
          Value: FarFlow
      TaskRoleArn:
        Fn::GetAtt:
          - AirflowServiceAirflowTaskTaskRoleDAB3F347
          - Arn
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/Resource
  AirflowServiceAirflowTaskWebserverContainerLogGroupB3157555:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/WebserverContainer/LogGroup/Resource
  AirflowServiceAirflowTaskExecutionRoleDFF6909B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/ExecutionRole/Resource
  AirflowServiceAirflowTaskExecutionRoleDefaultPolicy68F65745:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/aws-cdk/assets
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - AirflowServiceAirflowTaskWebserverContainerLogGroupB3157555
                - Arn
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - AirflowServiceAirflowTaskSchedulerContainerLogGroupFA5FDB3B
                - Arn
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - AirflowServiceAirflowTaskWorkerContainerLogGroup21E76534
                - Arn
        Version: "2012-10-17"
      PolicyName: AirflowServiceAirflowTaskExecutionRoleDefaultPolicy68F65745
      Roles:
        - Ref: AirflowServiceAirflowTaskExecutionRoleDFF6909B
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/ExecutionRole/DefaultPolicy/Resource
  AirflowServiceAirflowTaskSchedulerContainerLogGroupFA5FDB3B:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/SchedulerContainer/LogGroup/Resource
  AirflowServiceAirflowTaskWorkerContainerLogGroup21E76534:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowTask/WorkerContainer/LogGroup/Resource
  AirflowService91DB4125:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: ECSCluster7D463CD4
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: WebserverContainer
          ContainerPort: 8080
          TargetGroupArn:
            Ref: AirflowServiceNetworkLoadBalancerListenerAirflowFargateServiceTargetGroupGroupBE293586
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - SecurityGroupDD263621
                - GroupId
          Subnets:
            - Ref: VpcPrivateSubnet1Subnet536B997A
            - Ref: VpcPrivateSubnet2Subnet3788AAA1
      PlatformVersion: 1.4.0
      Tags:
        - Key: Stack
          Value: FarFlow
      TaskDefinition:
        Ref: AirflowServiceAirflowTask71E3494E
    DependsOn:
      - AirflowServiceNetworkLoadBalancerListenerAirflowFargateServiceTargetGroupGroupBE293586
      - AirflowServiceNetworkLoadBalancerListener51C34BF5
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowService/AirflowService/Service
  AirflowServiceNetworkLoadBalancerE66A9F34:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: load_balancing.cross_zone.enabled
          Value: "true"
      Scheme: internet-facing
      Subnets:
        - Ref: VpcPublicSubnet1Subnet5C2D37C4
        - Ref: VpcPublicSubnet2Subnet691E08A3
      Tags:
        - Key: Stack
          Value: FarFlow
      Type: network
    DependsOn:
      - VpcPublicSubnet1DefaultRoute3DA9E72A
      - VpcPublicSubnet2DefaultRoute97F91067
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowService/NetworkLoadBalancer/Resource
  AirflowServiceNetworkLoadBalancerListener51C34BF5:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: AirflowServiceNetworkLoadBalancerListenerAirflowFargateServiceTargetGroupGroupBE293586
          Type: forward
      LoadBalancerArn:
        Ref: AirflowServiceNetworkLoadBalancerE66A9F34
      Port: 80
      Protocol: TCP
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowService/NetworkLoadBalancer/Listener/Resource
  AirflowServiceNetworkLoadBalancerListenerAirflowFargateServiceTargetGroupGroupBE293586:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /health
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      Port: 80
      Protocol: TCP
      Tags:
        - Key: Stack
          Value: FarFlow
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: "60"
      TargetType: ip
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: FarFlow/AirflowService/AirflowService/NetworkLoadBalancer/Listener/AirflowFargateServiceTargetGroupGroup/Resource
  DagTasksTaskConstructEFSVolumeBE5A9C43:
    Type: AWS::EFS::FileSystem
    Properties:
      FileSystemTags:
        - Key: Name
          Value: FarFlow/DagTasks-TaskConstruct/EFSVolume
        - Key: Stack
          Value: FarFlow
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/EFSVolume/Resource
  DagTasksTaskConstructEFSVolumeEfsMountTarget101AB681F:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: DagTasksTaskConstructEFSVolumeBE5A9C43
      SecurityGroups:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
      SubnetId:
        Ref: VpcPrivateSubnet1Subnet536B997A
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/EFSVolume/EfsMountTarget1
  DagTasksTaskConstructEFSVolumeEfsMountTarget251E6500D:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: DagTasksTaskConstructEFSVolumeBE5A9C43
      SecurityGroups:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
      SubnetId:
        Ref: VpcPrivateSubnet2Subnet3788AAA1
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/EFSVolume/EfsMountTarget2
  DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefTaskRoleD9FC034C:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowCombinedTask-TaskConstruct/FarFlowCombinedTask-TaskDef/TaskRole/Resource
  DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDef3FC97995:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:c4662d0224359fa0254578643799aa2ce65eae6a894052b634b2b3dfea76869e
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: FarFlowDagTaskLogsA7522BE9
              awslogs-stream-prefix: FarFlowDagTaskLogging
              awslogs-region:
                Ref: AWS::Region
          MountPoints:
            - ContainerPath: /shared-volume
              ReadOnly: false
              SourceVolume: SharedVolume
          Name: MultiTaskContainer
      Cpu: "512"
      ExecutionRoleArn:
        Fn::GetAtt:
          - DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefExecutionRole23A7C8F7
          - Arn
      Family: FarFlowCombinedTask
      Memory: "1024"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Stack
          Value: FarFlow
      TaskRoleArn:
        Fn::GetAtt:
          - DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefTaskRoleD9FC034C
          - Arn
      Volumes:
        - Name: SharedVolume
          EfsVolumeConfiguration:
            FileSystemId:
              Ref: DagTasksTaskConstructEFSVolumeBE5A9C43
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowCombinedTask-TaskConstruct/FarFlowCombinedTask-TaskDef/Resource
  DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefExecutionRole23A7C8F7:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowCombinedTask-TaskConstruct/FarFlowCombinedTask-TaskDef/ExecutionRole/Resource
  DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefExecutionRoleDefaultPolicyB180210D:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/aws-cdk/assets
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - FarFlowDagTaskLogsA7522BE9
                - Arn
        Version: "2012-10-17"
      PolicyName: DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefExecutionRoleDefaultPolicyB180210D
      Roles:
        - Ref: DagTasksTaskConstructFarFlowCombinedTaskTaskConstructFarFlowCombinedTaskTaskDefExecutionRole23A7C8F7
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowCombinedTask-TaskConstruct/FarFlowCombinedTask-TaskDef/ExecutionRole/DefaultPolicy/Resource
  DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefTaskRole43326570:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowNumbersTask-TaskConstruct/FarFlowNumbersTask-TaskDef/TaskRole/Resource
  DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDef6A14D22E:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:c001f1394b204fc65df7c022ee9ed359826a19eb0e91f078144d4f6ccb135cd3
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: FarFlowDagTaskLogsA7522BE9
              awslogs-stream-prefix: FarFlowDagTaskLogging
              awslogs-region:
                Ref: AWS::Region
          MountPoints:
            - ContainerPath: /shared-volume
              ReadOnly: false
              SourceVolume: SharedVolume
          Name: NumbersContainer
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefExecutionRole2AD46482
          - Arn
      Family: FarFlowNumbersTask
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Stack
          Value: FarFlow
      TaskRoleArn:
        Fn::GetAtt:
          - DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefTaskRole43326570
          - Arn
      Volumes:
        - Name: SharedVolume
          EfsVolumeConfiguration:
            FileSystemId:
              Ref: DagTasksTaskConstructEFSVolumeBE5A9C43
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowNumbersTask-TaskConstruct/FarFlowNumbersTask-TaskDef/Resource
  DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefExecutionRole2AD46482:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Stack
          Value: FarFlow
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowNumbersTask-TaskConstruct/FarFlowNumbersTask-TaskDef/ExecutionRole/Resource
  DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefExecutionRoleDefaultPolicy564287D0:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/aws-cdk/assets
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - FarFlowDagTaskLogsA7522BE9
                - Arn
        Version: "2012-10-17"
      PolicyName: DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefExecutionRoleDefaultPolicy564287D0
      Roles:
        - Ref: DagTasksTaskConstructFarFlowNumbersTaskTaskConstructFarFlowNumbersTaskTaskDefExecutionRole2AD46482
    Metadata:
      aws:cdk:path: FarFlow/DagTasks-TaskConstruct/FarFlowNumbersTask-TaskConstruct/FarFlowNumbersTask-TaskDef/ExecutionRole/DefaultPolicy/Resource
  FarFlowDagTaskLogsA7522BE9:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: FarFlowDagTaskLogs
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FarFlow/FarFlowDagTaskLogs/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.76.0,@aws-cdk/aws-applicationautoscaling=1.76.0,@aws-cdk/aws-autoscaling=1.76.0,@aws-cdk/aws-autoscaling-common=1.76.0,@aws-cdk/aws-autoscaling-hooktargets=1.76.0,@aws-cdk/aws-cloudwatch=1.76.0,@aws-cdk/aws-codeguruprofiler=1.76.0,@aws-cdk/aws-ec2=1.76.0,@aws-cdk/aws-ecr=1.76.0,@aws-cdk/aws-ecr-assets=1.76.0,@aws-cdk/aws-ecs=1.76.0,@aws-cdk/aws-efs=1.76.0,@aws-cdk/aws-elasticloadbalancingv2=1.76.0,@aws-cdk/aws-events=1.76.0,@aws-cdk/aws-iam=1.76.0 [...]
    Metadata:
      aws:cdk:path: FarFlow/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  AirflowServiceLoadBalanceDNSName1AB9D85A:
    Value:
      Fn::GetAtt:
        - AirflowServiceNetworkLoadBalancerE66A9F34
        - DNSName
  AirflowServiceAdminPassword0868D285:
    Value: 0e69d6d3-b29b-4713-8c3d-667d83a3b3bd
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
